@@ -1,3 +1,5 @@
+* Agent Console: perform translation of legacy contact labels for incoming 
+  calls into user-friendly values subject to i18n. Fixes Elastix bug #1039. 
 * Dialer (ECCP): extend "getcampaignlist" request to add extra filtering options
 * Dialer (ECCP): fix behavior when an incoming call is put on hold, and then is
   hung up by the remote side.
